# paraicehockey

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  ANALYTICS.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  requiriments.txt  setup.cfg
.github/workflows/: codestyle.yml  develop_workflow.yml  paraice.yml  push_into_dev.yml  push_into_dev_copy.yml  push_into_master.yml
data/: postmaster.pid
data/base/1/: 1247  1249  1255  1255_vm  1259  1259_vm  12833  12834  2608  2609  2610_vm  2612  2615  2615_vm  2616_vm  2618_vm  2652  2658  2666  2668  2673  2675  2681  2687  2691  2693  2754  2756  2839  3079  3164  3456_vm  3542  3600_vm  3603  3608  3712  3764_vm
data/base/12993/: 1247_vm  1249_vm  1259  12838  12839_vm  12843  12849_vm  12853  12854  12854_vm  12863  2617_vm  2619  2651  2653  2654  2659  2663  2664  2665  2667  2669  2674  2679  2688  2689  2692  2696  (+9 more)
data/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  pg_control  pg_internal.init
data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
grafana/: config.ini
grafana/dashboards/: default.json
nginx/: default.conf
prometheus/: config.yml
src/: __init__.py
src/attributes_shop/: models.py  shop.py
src/core/: __init__.py  constants.py  prometheus.py  prometheus_constants.py  save_metrics.py  settings.py  utils.py
src/features/: __init__.py  aboutus.py  activities.py  all_for_hockey.py  answer_page.py  base.py  big_menu_page.py  champion_way.py  donations.py  export_to_excel.py  federation_info.py  go_back_go_home.py  hockey_types.py  main_menu.py  our_values.py  question.py  quiz.py  send_stickers.py  start.py  store.py  who_is_fyrk.py
src/quiz/: model.py  quiz.py
tg-bot-config/grafana/: grafana.ini
tg-bot-config/prometheus/: config.yml
(+112 files in other folders)
