[tool.poetry]
name = "paraicehockey"
version = "0.1.0"
description = ""
authors = ["Ekaterina Kolosova <kolosova411@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.15"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
pre-commit = "^2.21.0"
flake8 = "^6.0.0"
flake8-print = "^5.0.0"
flake8-bugbear = "^23.1.20"
flake8-return = "^1.2.0"
flake8-comprehensions = "^3.10.1"
flake8-pie = "^0.16.0"
flake8-quotes = "^3.3.2"
flake8-simplify = "^0.19.3"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.13.3"
flake8-docstrings = "^1.7.0"
prometheus-client = "^0.16.0"
openpyxl = "^3.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.3"
flake8-docstrings = "^1.6.0"
flake8-isort = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
